fase de planeacion

--- a/index.html
+++ b/index.html
@@ -7,8 +7,37 @@
     <meta name="autor" content="Lautaro Santillan">
     <title>MiniMercado</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="icon" sizes="16x16" href="img/botellas.png">
 </head>
 <body>
-    
+    <!-- GRID LAYOUT -->
+    <div class="grid--container">
+        <!-- HEADER -->
+        <div class="header">
+            <!-- NAVBAR -->
+            <nav>
+                <h1 class="nombre"><a href="index.html"><span>BOTELLA</span>MANIA<span></a></h1>
+                <label for="menu" class="nav--hamburguesa">
+                    <i class="fas fa-bars"></i>
+                </label>
+                <input type="checkbox" id="menu" class="nav--input">
+                <ul class="nav--visible">
+                    <li><a href="index.html">INICIO</a></li>
+                    <li><a href="./html/productos.html">PRODUCTOS</a></li>
+                    <li><a href="./html/clases.html">CLASES</a></li>
+                    <li><a href="./html/contacto.html">CONTACTO</a></li>
+                    <li><a href="./html/galeria.html">GALERIA</a></li>
+                </ul>
+            </nav>
+        </div>
+        <!-- MAIN -->
+        <div class="main">
+
+        </div>
+        <!-- FOOTER -->
+        <div class="footer">
+            
+        </div>
+    </div>
 </body>
 </html>
