--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="autor" content="Lautaro Santillan">
-    <title>MiniMercado</title>
+    <title>Bébelo</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="icon" sizes="16x16" href="img/botellas.png">
+    <script src="https://kit.fontawesome.com/79808c372d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- GRID LAYOUT -->
@@ -16,18 +17,22 @@
         <div class="header">
             <!-- NAVBAR -->
             <nav>
-                <h1 class="nombre"><a href="index.html"><span>BOTELLA</span>MANIA<span></a></h1>
-                <label for="menu" class="nav--hamburguesa">
-                    <i class="fas fa-bars"></i>
-                </label>
-                <input type="checkbox" id="menu" class="nav--input">
-                <ul class="nav--visible">
+                <div class="logo">
+                    <a href="index.html"><img src="img/botellas.png" class="icono"></a>
+                    <h1 class="nombre"><a href="index.html">Bébelo</a></h1>
+                </div>
+                <div class="nav--visible navbar">
                     <li><a href="index.html">INICIO</a></li>
-                    <li><a href="./html/productos.html">PRODUCTOS</a></li>
-                    <li><a href="./html/clases.html">CLASES</a></li>
-                    <li><a href="./html/contacto.html">CONTACTO</a></li>
-                    <li><a href="./html/galeria.html">GALERIA</a></li>
-                </ul>
+                    <li><a href="">PRODUCTOS</a></li>
+                    <li><a href="">CONTACTO</a></li>
+                </div>
+                <div class="nav--registro navbar">
+                    <li><a href="">INGRESAR</a></li>
+                    <li><a href="">REGISTRAR</a></li>
+                </div>
+                <div class="carrito">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
             </nav>
         </div>
         <!-- MAIN -->
@@ -37,7 +42,20 @@
         <!-- FOOTER -->
         <div class="footer">
             
-        </div>
     </div>
+    <!-- <nav>
+        <a href="index.html"><img src="img/botellas.png" class="icono"></a>
+        <h1 class="nombre"><a href="index.html">Bébelo</a></h1>
+        <ul class="nav--visible">
+            <li><a href="index.html">INICIO</a></li>
+            <li><a href="">PRODUCTOS</a></li>
+            <li><a href="">CONTACTO</a></li>
+        </ul>
+        <ul class="nav--registro">
+            <li><a href="">INGRESAR</a></li>
+            <li><a href="">REGISTRAR</a></li>
+        </ul>
+        <i class="fa-solid fa-cart-shopping"></i>
+    </nav> -->
 </body>
 </html>
