cambios en el header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="autor" content="Lautaro Santillan">
-    <title>Bébelo</title>
+    <title>Bébelo | Tienda Virtual</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="icon" sizes="16x16" href="img/botellas.png">
     <script src="https://kit.fontawesome.com/79808c372d.js" crossorigin="anonymous"></script>
