--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="autor" content="Lautaro Santillan">
-    <title>Bébelo | Tienda Virtual</title>
+    <title>TragoMania | Tienda Virtual</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="icon" sizes="16x16" href="img/botellas.png">
     <script src="https://kit.fontawesome.com/79808c372d.js" crossorigin="anonymous"></script>
@@ -15,23 +15,27 @@
     <div class="grid--container">
         <!-- HEADER -->
         <div class="header">
-            <!-- NAVBAR -->
-            <nav>
-                <div class="logo">
-                    <a href="index.html"><img src="img/botellas.png" class="icono"></a>
-                    <h1 class="nombre"><a href="index.html">Bébelo</a></h1>
-                </div>
-                <div class="nav--visible navbar">
-                    <li><a href="index.html">INICIO</a></li>
-                    <li><a href="">PRODUCTOS</a></li>
-                    <li><a href="">CONTACTO</a></li>
-                </div>
-                <div class="nav--registro navbar">
-                    <li><a href="">INGRESAR</a></li>
-                    <li><a href="">REGISTRAR</a></li>
-                </div>
+            <div class="header--logo">
+                <a href="index.html" class="logo">
+                    <img src="img/botellas.png" class="icono">
+                    <h1 class="nombre">Trag<span>o</span>Mani<span>a</span></h1>
+                </a>
                 <div class="carrito">
                     <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+            <!-- NAVBAR -->
+            <nav class="header--nav">
+                <div class="nav--visible">
+                    <li><a href="index.html">INICIO</a></li>
+                    <li><a href="">PRODUCTOS</a></li>
+                    <li><a href="">GALERIA</a></li>
+                    <li><a href="">CONTACTO</a></li>
+                </div>
+                <div class="nav--registro">
+                    <li><a href="">INGRESAR</a></li>
+                    <li>|</li>
+                    <li><a href="">REGISTRARSE</a></li>
                 </div>
             </nav>
         </div>
@@ -43,19 +47,5 @@
         <div class="footer">
             
     </div>
-    <!-- <nav>
-        <a href="index.html"><img src="img/botellas.png" class="icono"></a>
-        <h1 class="nombre"><a href="index.html">Bébelo</a></h1>
-        <ul class="nav--visible">
-            <li><a href="index.html">INICIO</a></li>
-            <li><a href="">PRODUCTOS</a></li>
-            <li><a href="">CONTACTO</a></li>
-        </ul>
-        <ul class="nav--registro">
-            <li><a href="">INGRESAR</a></li>
-            <li><a href="">REGISTRAR</a></li>
-        </ul>
-        <i class="fa-solid fa-cart-shopping"></i>
-    </nav> -->
 </body>
 </html>
