--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- NAVBAR -->
             <nav class="header--nav">
                 <div class="nav--visible">
-                    <li><a href="index.html">INICIO</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="">PRODUCTOS</a></li>
                     <li><a href="">GALERIA</a></li>
                     <li><a href="">CONTACTO</a></li>
@@ -45,7 +45,21 @@
         </div>
         <!-- FOOTER -->
         <div class="footer">
-            
+            <div class="social">
+                <a href="#"><i class="fa-brands fa-facebook social--facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-whatsapp whatsapp"></i></a>
+            </div>
+            <div class="nav--footer">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="">PRODUCTOS</a></li>
+                <li><a href="">GALERIA</a></li>
+                <li><a href="">CONTACTO</a></li>
+            </div>
+            <div class="copyright">
+                <small>&copy; 2022 <b>TRAGOMANIA</b> - Todos los Derechos Reservados.</small>
+            </div>
     </div>
 </body>
 </html>
