--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="">PRODUCTOS</a></li>
                     <li><a href="">GALERIA</a></li>
-                    <li><a href="">CONTACTO</a></li>
+                    <li><a href="#contacto">CONTACTO</a></li>
                 </div>
                 <div class="nav--registro">
                     <li><a href="">INGRESAR</a></li>
@@ -44,7 +44,7 @@
 
         </div>
         <!-- FOOTER -->
-        <div class="footer">
+        <div class="footer" id="contacto">
             <div class="social">
                 <a href="#"><i class="fa-brands fa-facebook social--facebook"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram instagram"></i></a>
@@ -55,7 +55,7 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="">PRODUCTOS</a></li>
                 <li><a href="">GALERIA</a></li>
-                <li><a href="">CONTACTO</a></li>
+                <li><a href="#contacto">CONTACTO</a></li>
             </div>
             <div class="copyright">
                 <small>&copy; 2022 <b>TRAGOMANIA</b> - Todos los Derechos Reservados.</small>
