--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- GRID LAYOUT -->
     <div class="grid--container">
         <!-- HEADER -->
-        <div class="header">
+        <div class="header" id="home">
             <div class="header--logo">
                 <a href="index.html" class="logo">
                     <img src="img/botellas.png" class="icono">
@@ -41,7 +41,13 @@
         </div>
         <!-- MAIN -->
         <div class="main">
-
+            <div class="banner">
+                <div class="banner--descripcion">
+                    <h2>Vive cada trago</h2>
+                    <p>Pase a chequear nuestros catálogo de bebidas sin y con alcohol</p>
+                    <a href="#">VER PRODUCTOS</a>
+                </div>
+            </div>
         </div>
         <!-- FOOTER -->
         <div class="footer" id="contacto">
@@ -52,7 +58,7 @@
                 <a href="#"><i class="fa-brands fa-whatsapp whatsapp"></i></a>
             </div>
             <div class="nav--footer">
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="#home">HOME</a></li>
                 <li><a href="">PRODUCTOS</a></li>
                 <li><a href="">GALERIA</a></li>
                 <li><a href="#contacto">CONTACTO</a></li>
