--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="nav--visible">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="#productos--lista">PRODUCTOS</a></li>
-                    <li><a href="">GALERIA</a></li>
+                    <li><a href="#galeria">GALERIA</a></li>
                     <li><a href="#contacto">CONTACTO</a></li>
                 </div>
                 <div class="nav--registro">
@@ -501,6 +501,30 @@
                     <button type="button" class="btn">Agregar al Carrito</button>
                 </div>
             </div>
+            <div class="galeria" id="galeria">
+                <div class="galeria--img1">
+                    <img src="img/gentebebidas.jpg" alt="GenteBebiendo">
+                </div>
+                <div class="galeria--p1">
+                    <h3>¡Estamos para salvarte!</h3>
+                    <p>¿Justo te tocó a vos ir a comprar el escabio u otra bebida y cuando volves pasa algo increible?</p>
+                    <p>Bueno si es así, ya no te pierdas más un momento especial porque te toque ir a comprar, nos haces tu pedido y en un momento estamos ahi.</p>
+                </div>
+                <div class="galeria--p2">
+                    <h3>¿Lo queres? Nosotros lo tenemos</h3>
+                    <p>
+                        Whisky o Licores? Tenemos. <br> 
+                        Vinos? También. <br> 
+                        Energizantes para aguantar hasta que salga el Sol? Claramente tenemos. <br> 
+                        Aperitivos hay...? Y como no va a ver?. <br>
+                        Gaseosas y Jugos? Sí, y de las primeras marcas. <br>
+                        Tenemos todo lo que necesitas para que esa juntada o previa sea espectacular. HASTA AGUA PARA ALGUNO QUE QUIEBRE :)
+                    </p>
+                </div>
+                <div class="galeria--img2">
+                    <img src="img/fotobebidas.jpg" alt="FotoDeBebidas">
+                </div>
+            </div>
         </div>
         <!-- FOOTER -->
         <div class="footer" id="contacto">
@@ -515,7 +539,7 @@
             <div class="nav--footer">
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#productos--lista">PRODUCTOS</a></li>
-                <li><a href="">GALERIA</a></li>
+                <li><a href="#galeria">GALERIA</a></li>
                 <li><a href="#contacto">CONTACTO</a></li>
             </div>
             <!-- COPYRIGHT -->
