--- a/index.html
+++ b/index.html
@@ -109,6 +109,175 @@
                     </div>
                     <button type="button" class="btn">Agregar al Carrito</button>
                 </div>
+                <div class="producto--ind">
+                    <img src="img/baggio.jpg" alt="Baggio">
+                    <h3>Baggio 1l</h3>
+                    <div class="producto--precios">
+                        <span>$</span>
+                        <p class="precio">120</p>
+                    </div>
+                    <div class="producto--cantidad">
+                        <span>Cantidad:</span>
+                        <input type="number" min="1" max="100" value="1" name="" id="" class="cantidad">
+                    </div>
+                    <button type="button" class="btn">Agregar al Carrito</button>
+                </div>
+                <div class="producto--ind">
+                    <img src="img/agua.jpg" alt="Agua">
+                    <h3>Agua 1.5l</h3>
+                    <div class="producto--precios">
+                        <span>$</span>
+                        <p class="precio">100</p>
+                    </div>
+                    <div class="producto--cantidad">
+                        <span>Cantidad:</span>
+                        <input type="number" min="1" max="100" value="1" name="" id="" class="cantidad">
+                    </div>
+                    <button type="button" class="btn">Agregar al Carrito</button>
+                </div>
+                <div class="producto--ind">
+                    <img src="img/fernet.jpg" alt="Fernet">
+                    <h3>Fernet 750ml</h3>
+                    <div class="producto--precios">
+                        <span>$</span>
+                        <p class="precio">850</p>
+                    </div>
+                    <div class="producto--cantidad">
+                        <span>Cantidad:</span>
+                        <input type="number" min="1" max="100" value="1" name="" id="" class="cantidad">
+                    </div>
+                    <button type="button" class="btn">Agregar al Carrito</button>
+                </div>
+                <div class="producto--ind">
+                    <img src="img/gancia.jpg" alt="Gancia">
+                    <h3>Gancia 980ml</h3>
+                    <div class="producto--precios">
+                        <span>$</span>
+                        <p class="precio">420</p>
+                    </div>
+                    <div class="producto--cantidad">
+                        <span>Cantidad:</span>
+                        <input type="number" min="1" max="100" value="1" name="" id="" class="cantidad">
+                    </div>
+                    <button type="button" class="btn">Agregar al Carrito</button>
+                </div>
+                <div class="producto--ind">
+                    <img src="img/smirnoff.jpg" alt="Smirnoff">
+                    <h3>Smirnoff 750ml </h3>
+                    <div class="producto--precios">
+                        <span>$</span>
+                        <p class="precio">770</p>
+                    </div>
+                    <div class="producto--cantidad">
+                        <span>Cantidad:</span>
+                        <input type="number" min="1" max="100" value="1" name="" id="" class="cantidad">
+                    </div>
+                    <button type="button" class="btn">Agregar al Carrito</button>
+                </div>
+                <div class="producto--ind">
+                    <img src="img/frizze.jpg" alt="Frizze">
+                    <h3>Frizze 1l</h3>
+                    <div class="producto--precios">
+                        <span>$</span>
+                        <p class="precio">230</p>
+                    </div>
+                    <div class="producto--cantidad">
+                        <span>Cantidad:</span>
+                        <input type="number" min="1" max="100" value="1" name="" id="" class="cantidad">
+                    </div>
+                    <button type="button" class="btn">Agregar al Carrito</button>
+                </div>
+                <div class="producto--ind">
+                    <img src="img/campari.jpg" alt="Campari">
+                    <h3>Campari 750ml</h3>
+                    <div class="producto--precios">
+                        <span>$</span>
+                        <p class="precio">670</p>
+                    </div>
+                    <div class="producto--cantidad">
+                        <span>Cantidad:</span>
+                        <input type="number" min="1" max="100" value="1" name="" id="" class="cantidad">
+                    </div>
+                    <button type="button" class="btn">Agregar al Carrito</button>
+                </div>
+                <div class="producto--ind">
+                    <img src="img/monster2.jpg" alt="Monster">
+                    <h3>Monster 500ml</h3>
+                    <div class="producto--precios">
+                        <span>$</span>
+                        <p class="precio">230</p>
+                    </div>
+                    <div class="producto--cantidad">
+                        <span>Cantidad:</span>
+                        <input type="number" min="1" max="100" value="1" name="" id="" class="cantidad">
+                    </div>
+                    <button type="button" class="btn">Agregar al Carrito</button>
+                </div>
+                <div class="producto--ind">
+                    <img src="img/redbull.jpg" alt="RedBull">
+                    <h3>Red Bull 500ml</h3>
+                    <div class="producto--precios">
+                        <span>$</span>
+                        <p class="precio">220</p>
+                    </div>
+                    <div class="producto--cantidad">
+                        <span>Cantidad:</span>
+                        <input type="number" min="1" max="100" value="1" name="" id="" class="cantidad">
+                    </div>
+                    <button type="button" class="btn">Agregar al Carrito</button>
+                </div>
+                <div class="producto--ind">
+                    <img src="img/ipa.jpg" alt="7up">
+                    <h3>IPA 500ml</h3>
+                    <div class="producto--precios">
+                        <span>$</span>
+                        <p class="precio">300</p>
+                    </div>
+                    <div class="producto--cantidad">
+                        <span>Cantidad:</span>
+                        <input type="number" min="1" max="100" value="1" name="" id="" class="cantidad">
+                    </div>
+                    <button type="button" class="btn">Agregar al Carrito</button>
+                </div>
+                <div class="producto--ind">
+                    <img src="img/sky.jpg" alt="7up">
+                    <h3>SKY 750ml</h3>
+                    <div class="producto--precios">
+                        <span>$</span>
+                        <p class="precio">840</p>
+                    </div>
+                    <div class="producto--cantidad">
+                        <span>Cantidad:</span>
+                        <input type="number" min="1" max="100" value="1" name="" id="" class="cantidad">
+                    </div>
+                    <button type="button" class="btn">Agregar al Carrito</button>
+                </div>
+                <div class="producto--ind">
+                    <img src="img/corona.jpg" alt="7up">
+                    <h3>Corona 330ml</h3>
+                    <div class="producto--precios">
+                        <span>$</span>
+                        <p class="precio">200</p>
+                    </div>
+                    <div class="producto--cantidad">
+                        <span>Cantidad:</span>
+                        <input type="number" min="1" max="100" value="1" name="" id="" class="cantidad">
+                    </div>
+                    <button type="button" class="btn">Agregar al Carrito</button>
+                </div>
+                <div class="producto--ind">
+                    <img src="img/absolut.jpg" alt="7up">
+                    <h3>Absolut 1l</h3>
+                    <div class="producto--precios">
+                        <span>$</span>
+                        <p class="precio">1700</p>
+                    </div>
+                    <div class="producto--cantidad">
+                        <span>Cantidad:</span>
+                        <input type="number" min="1" max="100" value="1" name="" id="" class="cantidad">
+                    </div>
+                    <button type="button" class="btn">Agregar al Carrito</button>
+                </div>
             </div>
             <!-- GALERIA -->
             <div class="galeria" id="galeria">
