Funciones y Eventos JS

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             <!-- LISTADO DE PRODUCTOS -->
             <h2 class="productos--titulo" id="productos--lista">Nuestro <span>Productos</span></h2>
             <div class="botones--contenedor">
-                <button>ORDENAR A-Z</button>
-                <button>ORDENAR Z-A</button>
-                <button id="precioBarato">ORDENAR PRECIOS DE MENOR A MAYOR</button>
-                <button>ORDENAR PRECIO MAYOR A MENOR</button>
+                <button class="ordenA">ORDENAR A-Z</button>
+                <button class="ordenZ">ORDENAR Z-A</button>
+                <button class="precioBarato">ORDENAR PRECIOS DE MENOR A MAYOR</button>
+                <button class="precioCaro">ORDENAR PRECIO MAYOR A MENOR</button>
             </div>
             <!-- CATALOGO -->
             <div class="productos--contenedor" id="productos--contenedor">
@@ -109,6 +109,7 @@
             once: true,
         });
     </script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="js/miarchivo.js"></script>
 </body>
 </html>
