cambios en el header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- GRID LAYOUT -->
     <div class="grid--container">
         <!-- HEADER -->
-        <div class="header" id="home">
+        <div class="header">
             <a href="index.html" class="logo">
                 <img src="img/botellas.png" class="icono">
                 <h1 class="nombre">Trag<span>o</span>Mani<span>a</span></h1>
@@ -27,17 +27,17 @@
             </label>
             </label>
             <ul class="header--nav nav--animaciones">
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="index.html">INICIO</a></li>
                 <li><a href="#productos--lista">PRODUCTOS</a></li>
                 <li><a href="#contacto">CONTACTO</a></li>
             </ul>
+            <!-- CARRITO -->
+            <div class="carrito">
+                <a href="#carrito"><i class="fa-solid fa-cart-shopping"></i></a>
+            </div>
         </div>
         <!-- MAIN -->
         <div class="main">
-            <!-- CARRITO FLOTANTE -->
-            <div class="carrito-fixed">
-                <a href="#carrito"><i class="fa-solid fa-cart-shopping"></i></a>
-            </div>
             <!-- BANNER - PARALLAX -->
             <div class="banner">
                 <div class="banner--descripcion">
@@ -98,7 +98,7 @@
             </div>
             <!-- NAVBAR FOOTER -->
             <div class="nav--footer">
-                <li><a href="#home">HOME</a></li>
+                <li><a href="index.html">INICIO</a></li>
                 <li><a href="#productos--lista">PRODUCTOS</a></li>
                 <li><a href="#contacto">CONTACTO</a></li>
             </div>
