--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="autor" content="Lautaro Santillan">
     <title>TragoMania | Tienda Virtual</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="estilos.css" rel="stylesheet">
     <link rel="icon" sizes="16x16" href="img/botellas.png">
@@ -75,6 +76,8 @@
             <!-- CATALOGO -->
             <div class="productos--contenedor" id="productos--contenedor">
             </div>
+            <!-- CARRITO DE COMPRAS -->
+            
             <!-- GALERIA -->
             <div class="galeria" data-aos="zoom-in">
                 <div class="galeria--img1">
