pisar los estilos de Bootstrap

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <p>Nos encargamos de que tu pedido sea despachado y entregado sin demoras</p>
                 </div>
             </div>
-            <!-- LISTADO DE PRODUCTOS -->
+            <!-- BOTONES PRODUCTOS -->
             <h2 class="productos--titulo" id="productos--lista">Nuestro <span>Productos</span></h2>
             <div class="botones--contenedor">
                 <button class="ordenA">ORDENAR A-Z</button>
@@ -76,8 +76,77 @@
             <!-- CATALOGO -->
             <div class="productos--contenedor" id="productos--contenedor">
             </div>
-            <!-- CARRITO DE COMPRAS -->
-            
+            <!-- SECCION CONTENEDOR CARRITO -->
+            <!-- <section class="shopping-cart">
+                <div class="container">
+                    <h1 class="text-center">CARRITO</h1>
+                    <hr>
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="shopping-cart-header">
+                                <h6>Producto</h6>
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <div class="shopping-cart-header">
+                                <h6 class="text-truncate">Precio</h6>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="shopping-cart-header">
+                                <h6>Cantidad</h6>
+                            </div>
+                        </div>
+                    </div> -->
+                    <!-- CONTENDOR DE ITEMS AGREGADOS -->
+                    <div class="shopping-cart-items shoppingCartItemsContainer">
+                    </div>
+                    <!-- CONTENEDOR TOTAL -->
+                    <!-- <div class="row">
+                        <div class="col-12">
+                            <div class="shopping-cart-total d-flex align-items-center">
+                                <p class="mb-0">Total</p>
+                                <p class="ml-4 mb-0 shoppingCartTotal">0€</p>
+                                <div class="toast ml-auto bg-info" role="alert" aria-live="assertive" aria-atomic="true"
+                                    data-delay="2000">
+                                    <div class="toast-header">
+                                        <span>✅</span>
+                                        <strong class="mr-auto ml-1 text-secondary">Elemento en el carrito</strong>
+                                        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="toast-body text-white">
+                                        Se aumentó correctamente la cantidad
+                                    </div>
+                                </div>
+                                <button class="btn btn-success ml-auto comprarButton" type="button" data-toggle="modal"
+                                    data-target="#comprarModal">Comprar</button>
+                            </div>
+                        </div>
+                    </div> -->
+                    <!-- TARJETA DE MODAL COMPRA -->
+                    <!-- <div class="modal fade" id="comprarModal" tabindex="-1" aria-labelledby="comprarModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="comprarModalLabel">Gracias por su compra</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <p>Pronto recibirá su pedido</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section> -->
             <!-- GALERIA -->
             <div class="galeria" data-aos="zoom-in">
                 <div class="galeria--img1">
