--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <li><a href="#productos--lista">PRODUCTOS</a></li>
                 <li><a href="#contacto">CONTACTO</a></li>
             </ul>
-            <!-- CARRITO -->
+            <!-- ICONO CARRITO -->
             <div class="carrito">
-                <a href="#carrito"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="#carritosection"><i class="fa-solid fa-cart-shopping"></i></a>
             </div>
         </div>
         <!-- MAIN -->
@@ -73,11 +73,11 @@
                 <button class="precioBarato">ORDENAR PRECIOS DE MENOR A MAYOR</button>
                 <button class="precioCaro">ORDENAR PRECIO MAYOR A MENOR</button>
             </div>
-            <!-- CATALOGO -->
+            <!-- CATALOGO PRODUCTOS -->
             <div class="productos--contenedor" id="productos--contenedor">
-            </div>
-            <!-- SECCION CONTENEDOR CARRITO -->
-            <!-- <section class="shopping-cart">
+            </div>      
+            <!-- CARRITO -->
+            <section class="shopping-cart" id="carritosection">
                 <div class="container">
                     <h1 class="text-center">CARRITO</h1>
                     <hr>
@@ -97,16 +97,16 @@
                                 <h6>Cantidad</h6>
                             </div>
                         </div>
-                    </div> -->
-                    <!-- CONTENDOR DE ITEMS AGREGADOS -->
+                    </div>
+                    <!-- CARRITO ARTÍCULOS -->
                     <div class="shopping-cart-items shoppingCartItemsContainer">
                     </div>
-                    <!-- CONTENEDOR TOTAL -->
-                    <!-- <div class="row">
+                    <!-- MODAL DE TOTAL -->
+                    <div class="row">
                         <div class="col-12">
                             <div class="shopping-cart-total d-flex align-items-center">
                                 <p class="mb-0">Total</p>
-                                <p class="ml-4 mb-0 shoppingCartTotal">0€</p>
+                                <p class="ml-4 mb-0 shoppingCartTotal">$0</p>
                                 <div class="toast ml-auto bg-info" role="alert" aria-live="assertive" aria-atomic="true"
                                     data-delay="2000">
                                     <div class="toast-header">
@@ -124,29 +124,9 @@
                                     data-target="#comprarModal">Comprar</button>
                             </div>
                         </div>
-                    </div> -->
-                    <!-- TARJETA DE MODAL COMPRA -->
-                    <!-- <div class="modal fade" id="comprarModal" tabindex="-1" aria-labelledby="comprarModalLabel"
-                        aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="comprarModalLabel">Gracias por su compra</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <p>Pronto recibirá su pedido</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
-            </section> -->
+            </section>
             <!-- GALERIA -->
             <div class="galeria" data-aos="zoom-in">
                 <div class="galeria--img1">
