--- a/index.html
+++ b/index.html
@@ -77,56 +77,71 @@
             <div class="productos--contenedor" id="productos--contenedor">
             </div>      
             <!-- CARRITO -->
-            <section class="shopping-cart" id="carritosection">
-                <div class="container">
-                    <h1 class="text-center">CARRITO</h1>
-                    <hr>
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="shopping-cart-header">
-                                <h6>Producto</h6>
-                            </div>
-                        </div>
-                        <div class="col-2">
-                            <div class="shopping-cart-header">
-                                <h6 class="text-truncate">Precio</h6>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="shopping-cart-header">
-                                <h6>Cantidad</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- CARRITO ARTÍCULOS -->
-                    <div class="shopping-cart-items shoppingCartItemsContainer">
-                    </div>
-                    <!-- MODAL DE TOTAL -->
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="shopping-cart-total d-flex align-items-center">
-                                <p class="mb-0">Total</p>
-                                <p class="ml-4 mb-0 shoppingCartTotal">$0</p>
-                                <div class="toast ml-auto bg-info" role="alert" aria-live="assertive" aria-atomic="true"
-                                    data-delay="2000">
-                                    <div class="toast-header">
-                                        <span>✅</span>
-                                        <strong class="mr-auto ml-1 text-secondary">Elemento en el carrito</strong>
-                                        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="toast-body text-white">
-                                        Se aumentó correctamente la cantidad
-                                    </div>
-                                </div>
-                                <button class="btn btn-success ml-auto comprarButton" type="button" data-toggle="modal"
-                                    data-target="#comprarModal">Comprar</button>
-                            </div>
+            
+            <div class="container">
+                <h2>Carrito</h2>
+                <hr>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Item</th>
+                            <th scope="col">Cantidad</th>
+                            <th scope="col">Acción</th>
+                            <th scope="col">Total</th>
+                        </tr>
+                    </thead>
+                    <tbody id="items"></tbody>
+                        <tfoot>
+                            <tr id="footer">
+                                <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
+                            </tr>
+                        </tfoot>
+                </table>
+                <div class="row" id="cards"></div>
+            </div>
+
+            <template id="template-footer">
+                <th scope="row" colspan="2">Total productos</th>
+                <td>10</td>
+                <td>
+                    <button class="btn btn-danger btn-sm" id="vaciar-carrito">
+                        vaciar todo
+                    </button>
+                </td>
+                <td class="font-weight-bold">$ <span>5000</span></td>
+            </template>
+            
+            <template id="template-carrito">
+                <tr>
+                    <th scope="row"> </th>
+                    <td class="titleItem"> </td>
+                    <td> </td>
+                    <td>
+                        <button class="btn btn-info btn-sm">
+                            +
+                        </button>
+                        <button class="btn btn-danger btn-sm">
+                            -
+                        </button>
+                    </td>
+                    <td>$ <span></span></td>
+                </tr>
+            </template>
+
+            <template id="template-card">
+                <div class="col-12 mb-2 col-md-4">
+                    <div class="card producto--ind">
+                        <img src="" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h3>Titulo</h3>
+                            <p>precio</p>
+                            <button class="btn btn-dark">Añadir Producto</button>
                         </div>
                     </div>
                 </div>
-            </section>
+            </template>
+
             <!-- GALERIA -->
             <div class="galeria" data-aos="zoom-in">
                 <div class="galeria--img1">
@@ -170,6 +185,6 @@
     <!-- SCRIPTS ALERTAS -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- LINKEO A JS PROPIO -->
-    <script src="js/miarchivo.js"></script>
+    <script src="js/carrito.js"></script>
 </body>
 </html>
