--- a/index.html
+++ b/index.html
@@ -72,14 +72,23 @@
                 <button class="ordenZ">ORDENAR Z-A</button>
                 <button class="precioBarato">ORDENAR PRECIOS DE MENOR A MAYOR</button>
                 <button class="precioCaro">ORDENAR PRECIO MAYOR A MENOR</button>
-            </div>
-            <!-- CATALOGO PRODUCTOS -->
-            <div class="productos--contenedor" id="productos--contenedor">
-            </div>      
+            </div> 
+            <!-- CATALOGO PRODUCTOS --> 
+            <template id="template-card">
+                <div class="col-12 mb-2 col-md-4">
+                    <div class="card producto-individual">
+                        <img src="" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h3>Titulo</h3>
+                            <p>$ <span class="precio"> </span></p>
+                            <button class="btn btn-dark">Añadir Producto</button>
+                        </div>
+                    </div>
+                </div>
+            </template>
             <!-- CARRITO -->
-            
-            <div class="container">
-                <h2>Carrito</h2>
+            <div class="container" id="carritosection">
+                <h2 class="carritoTitulo">Carrito</h2>
                 <hr>
                 <table class="table">
                     <thead>
@@ -100,48 +109,28 @@
                 </table>
                 <div class="row" id="cards"></div>
             </div>
-
-            <template id="template-footer">
-                <th scope="row" colspan="2">Total productos</th>
-                <td>10</td>
-                <td>
-                    <button class="btn btn-danger btn-sm" id="vaciar-carrito">
-                        vaciar todo
-                    </button>
-                </td>
-                <td class="font-weight-bold">$ <span>5000</span></td>
-            </template>
-            
+            <!-- CARRITO CONTENIDO -->
             <template id="template-carrito">
                 <tr>
                     <th scope="row"> </th>
                     <td class="titleItem"> </td>
                     <td> </td>
                     <td>
-                        <button class="btn btn-info btn-sm">
-                            +
-                        </button>
-                        <button class="btn btn-danger btn-sm">
-                            -
-                        </button>
+                        <button class="btn btn-info btn-sm">+</button>
+                        <button class="btn btn-danger btn-sm">-</button>
                     </td>
-                    <td>$ <span></span></td>
+                    <td> $ <span></span> </td>
                 </tr>
             </template>
-
-            <template id="template-card">
-                <div class="col-12 mb-2 col-md-4">
-                    <div class="card producto--ind">
-                        <img src="" alt="" class="card-img-top">
-                        <div class="card-body">
-                            <h3>Titulo</h3>
-                            <p>precio</p>
-                            <button class="btn btn-dark">Añadir Producto</button>
-                        </div>
-                    </div>
-                </div>
+            <!-- CARRITO INFERIOR -->
+            <template id="template-footer">
+                <th scope="row" colspan="2">Total Productos</th>
+                <td class="cantidadTotal"> </td>
+                <td>
+                    <button class="btn btn-danger btn-sm" id="vaciar-carrito">Vaciar Todo</button>
+                </td>
+                <td class="font-weight-bold"> $ <span> </span></td>
             </template>
-
             <!-- GALERIA -->
             <div class="galeria" data-aos="zoom-in">
                 <div class="galeria--img1">
