--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 <td class="cantidadTotal"> </td>
                 <td>
                     <button class="btn btn-danger btn-sm" id="vaciar-carrito">Vaciar Todo</button>
+                    <button class="btn btn-success ml-auto" id="comprar-carrito">Comprar</button>
                 </td>
                 <td class="font-weight-bold"> $ <span> </span></td>
             </template>
