--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                     <td class="titleItem"> </td>
                     <td> </td>
                     <td>
-                        <button class="btn btn-info btn-sm">+</button>
-                        <button class="btn btn-danger btn-sm">-</button>
+                        <button class="btn btn-info btn-sm botonFn">+</button>
+                        <button class="btn btn-danger btn-sm botonFn">-</button>
                     </td>
                     <td> $ <span></span> </td>
                 </tr>
@@ -127,8 +127,8 @@
                 <th scope="row" colspan="2">Total Productos</th>
                 <td class="cantidadTotal"> </td>
                 <td>
-                    <button class="btn btn-danger btn-sm" id="vaciar-carrito">Vaciar Todo</button>
-                    <button class="btn btn-success ml-auto" id="comprar-carrito">Comprar</button>
+                    <button class="btn btn-danger btn-sm botonCart" id="vaciar-carrito">Vaciar Todo</button>
+                    <button class="btn btn-success ml-auto botonCart" id="comprar-carrito">Comprar</button>
                 </td>
                 <td class="font-weight-bold"> $ <span> </span></td>
             </template>
