--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>TragoMania | Tienda Virtual</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link href="estilos.css" rel="stylesheet">
     <link rel="icon" sizes="16x16" href="img/botellas.png">
     <script src="https://kit.fontawesome.com/79808c372d.js" crossorigin="anonymous"></script>
@@ -174,6 +175,7 @@
     </script>
     <!-- SCRIPTS ALERTAS -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <!-- LINKEO A JS PROPIO -->
     <script src="js/carrito.js"></script>
 </body>
