Intento de darle funcionalidad a los botones

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!-- BOTONES PRODUCTOS -->
             <h2 class="productos--titulo" id="productos--lista">Nuestro <span>Productos</span></h2>
             <div class="botones--contenedor">
-                <button class="ordenA">ORDENAR A-Z</button>
+                <button id="ordenA">ORDENAR A-Z</button>
                 <button class="ordenZ">ORDENAR Z-A</button>
                 <button class="precioBarato">ORDENAR PRECIOS DE MENOR A MAYOR</button>
                 <button class="precioCaro">ORDENAR PRECIO MAYOR A MENOR</button>
@@ -177,6 +177,7 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <!-- LINKEO A JS PROPIO -->
+    <!-- <script src="js/botones.js"></script> -->
     <script src="js/carrito.js"></script>
 </body>
 </html>
