--- a/index.html
+++ b/index.html
@@ -68,12 +68,6 @@
             </div>
             <!-- BOTONES PRODUCTOS -->
             <h2 class="productos--titulo" id="productos--lista">Nuestro <span>Productos</span></h2>
-            <div class="botones--contenedor">
-                <button id="ordenA">ORDENAR A-Z</button>
-                <button class="ordenZ">ORDENAR Z-A</button>
-                <button class="precioBarato">ORDENAR PRECIOS DE MENOR A MAYOR</button>
-                <button class="precioCaro">ORDENAR PRECIO MAYOR A MENOR</button>
-            </div> 
             <!-- CATALOGO PRODUCTOS --> 
             <template id="template-card">
                 <div class="col-12 mb-2 col-md-4">
@@ -82,7 +76,7 @@
                         <div class="card-body">
                             <h3>Titulo</h3>
                             <p>$ <span class="precio"> </span></p>
-                            <button class="btn btn-dark">Añadir Producto</button>
+                            <button class="btn btn-add">Añadir Producto</button>
                         </div>
                     </div>
                 </div>
